revisi add bpp front-end: menambahkan btn tambah bpp_history dan select bpp_history pada modal add bpp

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,22 @@
 .mr-2 {
   margin-right: 16px;
 }
+.mb-2 {
+  margin-bottom: 16px;
+}
+
+.btn-circle {
+  border-radius: 50% !important;
+}
+
+.border-0 {
+  border: 0;
+}
+
+.keterangan {
+  margin-left: -24px;
+}
+.keterangan:hover {
+  background-color: transparent;
+  color: black; 
+}
