--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,35 @@
 .d-flex {
   display: flex;
 }
+.items-center {
+  align-items: center;
+}
 .justify-content-center {
   justify-content: center;
+}
+.m-0 {
+  margin: 0 !important;
 }
 .mr-2 {
   margin-right: 16px;
 }
 .mb-2 {
-  margin-bottom: 16px;
+  margin-bottom: 16px !important;
+}
+.ml-auto {
+  margin-left: auto !important;
+}
+.mr-auto {
+  margin-right: auto !important;
+}
+.text-left {
+  text-align: left !important;
+}
+.text-right {
+  text-align: right !important;
+}
+.text-center {
+  text-align: center !important;
 }
 
 .btn-circle {
@@ -25,4 +46,62 @@
 .keterangan:hover {
   background-color: transparent;
   color: black; 
+}
+.bg-white {
+  background-color: white;
+}
+.breadcrumb-progress {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  border-radius: 4px;
+  overflow: hidden;
+  --blue: #4fc1e9;
+  --white: white;
+}
+.breadcrumb-progress > li {
+  padding-left: 32px;
+  padding-right: 8px;
+  position: relative;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.breadcrumb-progress > li > span {
+  z-index: 2;
+}
+
+.breadcrumb-progress > li.blue {
+  background-color: var(--blue);
+  color: white;
+}
+.breadcrumb-progress > li::after {
+  content: '';
+  display: block;
+  height: 32px;
+  width: 32px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: rotate(45deg) translate(10px, -10px);
+  z-index: 1;
+  border-top: 2px solid var(--blue);
+  border-right: 2px solid var(--blue);
+}
+.breadcrumb-progress > li.blue::after {
+  background-color: var(--blue);
+  border-top: 2px solid var(--white);
+  border-right: 2px solid var(--white);
+
+}
+
+.card {
+  background-color: white;
+  border-radius: 4px;
+  padding: 24px;
+}
+.card-title {
+  margin-bottom: 24px;
 }
