--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,14 @@
 .mr-2 {
   margin-right: 16px;
 }
+.ml-05 {
+  margin-left: 4px;
+}
 .mb-2 {
   margin-bottom: 16px !important;
+}
+.mb-3 {
+  margin-bottom: 24px !important;
 }
 .ml-auto {
   margin-left: auto !important;
