--- a/assets/css/bpp-report.css
+++ b/assets/css/bpp-report.css
@@ -1,15 +1,44 @@
+:root {
+  --dark-blue:#1e2fad;
+  --light-blue: #8acfe6;
+}
 @page {
   size: A4;
-  margin-top: 10mm;
+  margin-top: 130px;
   margin-right: 10mm;
-  margin-bottom: 10mm;
+  margin-bottom: 70px;
   margin-left: 10mm;
-
-  @bottom-right {
-    content: "Page "counter(page)"/" counter(pages);
+  @top-left {
+    content: element(header);
+    align-items: flex-end;
   }
-
+  @bottom-left {
+    content: element(footer);
+  }
+  /* @bottom-left {
+    content: element(footeraddress);
+  } */
+  /* @bottom-right {
+    content: element(footerweb);
+  } */
 }
+.pagedjs_margin.pagedjs_margin-bottom-left {
+  margin-left: -32px;
+  margin-right: -32px;
+}
+.pagedjs_margin.pagedjs_margin-bottom-left > .pagedjs_margin-content {
+  height: 35px;
+}
+.pagedjs_area {
+  padding-bottom: 3rem;
+}
+/* .pagedjs_margin-bottom-left {
+  margin-left: -32px;
+}
+.pagedjs_margin-bottom-right {
+  margin-right: -32px;
+} */
+
 
 .pagedjs_page {
   margin-left: auto;
@@ -28,15 +57,25 @@ h2 {
 p {
   font-size: .85rem;
 }
+#table {
+  /* break-inside: avoid; */
+}
 .header {
   display: flex;
+  position: running(header);
 }
 .logo {
-  width: 150px;
-  height: 150px;
+  width: 125px;
+  height: 105px;
+}
+#title {
+  string-set: title content(text);
 }
 .title {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--dark-blue);
 }
+
 .location {
   font-size: 0.75rem;
 }
@@ -45,11 +84,37 @@ p {
   font-size: .85rem;
 }
 
-.subtitle {
-
+.break-inside-avoid {
+  break-inside: avoid;
 }
-.ttd-wrapper {
-  /* break-before: page; */
+.asdf {
+  position: running(asdf);
+}
+.footer {
+  display: flex;
+  height: 100%;
+  flex-wrap: nowrap;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 11px;
+  position: running(footer);
+}
+.footer-address {
+  background-color: var(--dark-blue);
+  color: white;
+  flex: 3;
+  /* position: running(footeraddress); */
+}
+.footer-web {
+  background-color: var(--light-blue);
+  color: white;
+  font-weight: bold;
+  flex: 1;
+  font-size: 14px;
+  /* position: running(footerweb); */
+}
+td {
+  break-inside: avoid;
 }
 .ttd {
   height: 130px;
@@ -65,10 +130,15 @@ p {
   height: 2px;
   background-color: black;
 }
+.hr-5 {
+  height: 5px;
+}
 .mt-05 {
   margin-top: 0.125rem !important;
 }
-
+.mb-05 {
+  margin-bottom: 0.125rem !important;
+}
 .border-black {
   border-color: #000 !important;
 }
@@ -77,4 +147,7 @@ p {
 }
 .opacity-100 {
   opacity: 1 !important;
+}
+.text-right {
+  text-align: right;
 }
